--- a/css/application.css
+++ b/css/application.css
@@ -1,7 +1,3 @@
-* {
-/*  background-color: grey;
-*/}
-
 .board {
   width: 410px;
   height: 400px;
@@ -21,11 +17,14 @@
   font-size: 80px;
   outline: 3px solid white;
   background: rgba(238, 228, 218, 0.35);
+  margin-top: 5px;
+  margin-right: 2px;
 }
 
 
 body {
   font-family: monospace;
+  background-color: #faf8ef;
 }
 
 #header {
@@ -37,7 +36,3 @@ body {
   margin: auto;
   text-align: center;
 }
-/*
-#new-game-button {
-  color: white;
-}*/
