--- a/css/application.css
+++ b/css/application.css
@@ -14,11 +14,12 @@
   float: left;
   font-size: 20px;
   border-radius: 10px;
-  font-size: 2.5vw;
+  font-size: 3.2vw;
   outline: 3px solid white;
   background: rgba(238, 228, 218, 0.35);
   margin-top: 5px;
   margin-right: 2px;
+  vertical-align: center;
 }
 
 body {
@@ -34,6 +35,41 @@ body {
 .button {
   margin: auto;
   text-align: center;
+}
+
+@keyframes jello {
+  11.1% {
+    transform: none
+  }
+  22.2% {
+    transform: skewX(-12.5deg) skewY(-12.5deg)
+  }
+  33.3% {
+    transform: skewX(6.25deg) skewY(6.25deg)
+  }
+  44.4% {
+    transform: skewX(-3.125deg) skewY(-3.125deg)
+  }
+  55.5% {
+    transform: skewX(1.5625deg) skewY(1.5625deg)
+  }
+  66.6% {
+    transform: skewX(-0.78125deg) skewY(-0.78125deg)
+  }
+  77.7% {
+    transform: skewX(0.390625deg) skewY(0.390625deg)
+  }
+  88.8% {
+    transform: skewX(-0.1953125deg) skewY(-0.1953125deg)
+  }
+  100% {
+    transform: none
+  }
+}
+
+.jello {
+  animation: jello 0.5s;
+  transform-origin: center
 }
 
 .a0 {
