--- a/css/application.css
+++ b/css/application.css
@@ -8,15 +8,12 @@
 }
 
 .cell {
-  font-family: monospace;
   width: 100px;
   height: 100px;
   float: left;
-  font-size: 20px;
   border-radius: 10px;
   font-size: 3.2vw;
-/*  outline: 3px solid white;
-*/  background: rgba(238, 228, 218, 0.35);
+  background: rgba(238, 228, 218, 0.35);
   margin-top: 5px;
   margin-right: 2px;
   font-weight: bold;
@@ -76,7 +73,7 @@ body {
 
 .jello {
   animation: jello 0.2s;
-  transform-origin: center
+  transform-origin: center;
 }
 
 .a0 {
